# rust-emlib

./: Cargo.toml  build.rs
src/: ctypes.rs  interrupts.rs  leuart.rs  lib.rs  peripherals.rs  usart.rs  wrapper.h
